button does jump to first clip...but many bugs remain.

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -37,3 +37,7 @@ body {
   color: #fff;
   text-decoration: underline;
 }
+
+.controls {
+  padding: 1rem;
+}
